Fix gap prop

--- a/assets/sass/_mobile.sass
+++ b/assets/sass/_mobile.sass
@@ -50,7 +50,7 @@
 
     .footer
         &__subscribe
-            grid-gap: 59px
+            gap: 59px
 
         &__form
             padding-bottom: 115px
