--- a/assets/sass/_tablet.sass
+++ b/assets/sass/_tablet.sass
@@ -14,7 +14,7 @@
     .catalog
         padding-top: 18px
         &__top
-            grid-gap: 20px
+            gap: 20px
 
         &__big
             margin-top: 20px
@@ -23,7 +23,7 @@
         padding-top: 48px
 
         &__content
-            grid-gap: 16px
+            gap: 16px
             padding: 32px 0
 
     .feature
@@ -31,12 +31,12 @@
         padding-top: 48px
         padding-bottom: 48px
         flex-direction: column
-        grid-gap: 48px
+        gap: 48px
 
     .footer
         &__subscribe
             flex-direction: column
-            grid-gap: 48px
+            gap: 48px
             align-items: center
 
         &__quote
