--- a/assets/sass/pages/_cart.sass
+++ b/assets/sass/pages/_cart.sass
@@ -7,7 +7,7 @@
     &__products
         display: flex
         flex-direction: column
-        grid-gap: 40px
+        gap: 40px
 
     &__order
         width: 360px
@@ -24,7 +24,7 @@
     &-address
         display: flex
         flex-direction: column
-        grid-gap: 21px
+        gap: 21px
 
         &__btn
             max-width: 100px
