--- a/assets/sass/pages/_main.sass
+++ b/assets/sass/pages/_main.sass
@@ -62,7 +62,7 @@
 
     &__top
         display: flex
-        grid-gap: 30px
+        gap: 30px
         justify-content: space-between
 
     &__image
