--- a/assets/sass/pages/_products.sass
+++ b/assets/sass/pages/_products.sass
@@ -23,7 +23,7 @@
         display: flex
         flex-wrap: wrap
         justify-content: center
-        grid-gap: 30px
+        gap: 30px
 
 .product
     position: relative
@@ -172,7 +172,7 @@
         font-size: 14px
         color: #636363
         display: flex
-        grid-gap: 10px
+        gap: 10px
         align-items: center
 
     &__title_active
@@ -200,7 +200,7 @@
 .sort
     display: flex
     flex-grow: 2
-    grid-gap: 20px
+    gap: 20px
     padding-left: 30px
 
 .sort-params
@@ -236,7 +236,7 @@
     &__field
         display: flex
         align-items: center
-        grid-gap: 10px
+        gap: 10px
         font-size: 14px
 
 .pagination
