--- a/assets/sass/pages/_registration.sass
+++ b/assets/sass/pages/_registration.sass
@@ -46,10 +46,10 @@
 .check-list
     display: flex
     flex-direction: column
-    grid-gap: 6px
+    gap: 6px
 
     &__item
         list-style-type: none
         display: flex
-        grid-gap: 23px
+        gap: 23px
         align-items: center
