--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -62,7 +62,7 @@ a
     cursor: pointer
     display: flex
     justify-content: space-between
-    grid-gap: 10px
+    gap: 10px
     align-items: center
     background: none
     transition: background-color .4s, color .4s, box-shadow .4s
@@ -111,12 +111,12 @@ a
     &__left
         display: flex
         align-items: flex-end
-        grid-gap: 40px
+        gap: 40px
 
     &__right
         display: flex
         align-items: flex-end
-        grid-gap: 33px
+        gap: 33px
 
     &__box
         @extend .header__right
@@ -222,7 +222,7 @@ a
 
     &__social
         display: flex
-        grid-gap: 7px
+        gap: 7px
 
 .single-form
     margin-top: 30px
@@ -255,16 +255,16 @@ a
 .fields-set
     display: flex
     flex-direction: column
-    grid-gap: 21px
+    gap: 21px
     padding: 21px 0
 
 .radio
     display: flex
-    grid-gap: 20px
+    gap: 20px
 
     &__label
         display: flex
-        grid-gap: 10px
+        gap: 10px
         justify-content: flex-start
         align-items: center
         font-weight: 300
